src/midi/snapshots/message__snapshot_test-3.snap
---
source: src/midi/message.rs
expression: "MIDIMessage::from([176, 1, 0])"
---
ControlChange {
    channel: Channel(
        0,
    ),
    controller: Controller(
        1,
    ),
    value: ControllerValue(
        0,
    ),
}
